- style: align data cards with title - fix: only show Critical QC for Output files - style: adjust alignment for headers

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1503,7 +1503,7 @@ File Overview Styles
 					
 					.body {
 						flex: 1;
-						padding: 10px 12px;
+						padding: 10px 15px;
 						border: 1px solid $mercury;
 						border-top: 1px solid $gray-30;
 		
@@ -1750,7 +1750,6 @@ File Overview Styles
 							}
 						}
 						.header {
-							padding: 10px 10px;
 							border-bottom: 1px solid $gray-20;
 							&.top {
 								font-size: 1.05rem;
